
== tekUI Changelog ==

 * Visual, EditWindow, Input: added setSelection, TextEdit: uses application
 clipboard, removed class clipboard, quirky attribute retrieval corrected
 * Application: added obtainClipboard, releaseClipboard
 * Windows display: Added Unicode text rendering, added better support for
 keyboard qualifiers, windows opened at fixed positions had wrong size
 * Changed notes about LuaJIT and some additions to documentation
 * LuaExec: Changes merged in, in join() abort signals could be forwarded to
 already dead task, corrected by freeing task after return from exec, in
 waitmsg() fixed recalculation of waittime, returned signals should be correct
 * Exec: added semi-internal function TFreeTask(), user tasks are now
 freed in destructor context after their return from exec, minor cleanup
 in memory functions

=== 1.11: ===

 * HAL: fix for broken timer device under Windows, MMTimer timerequest abort
 on signal arrival did not work for ages, corrected, giving e.g. TWaitTime()
 in Windows display driver much better response times and smoother updates.
 * Luaexec: added functions getmsg, getname, getsignals, run, sendport,
 sendmsg, signal, sleep, wait, waitmsg, waittime, child methods abort, join,
 sendport, sendmsg, signal, terminate, including error propagation through
 running tasks, added childtask example
 * Default layouter: Fixed Weight attribute number representation problem
 with Lua 5.3
 * Windows, RawFB, DirectFB display drivers: Slip fixed in instantiating
 multiple times concurrently
 * X11 display driver: Workaround for Xft reinitialization b0rkedness
 * Exec: TInitmodule structure is now const, replyport field of messages is
 now NULL on allocation, added support for silently ignoring destruction of
 a task's own handle, allowing TEKCreate() to return a different task as the
 basetask, added TTask_InitData and GetInitData() to free TTask_UserData for
 user affairs in basetask