@@ -8,10 +8,11 @@ Source software and its license is compatible with the GPL.
 
 ---------------------------------------------------------------------
 
-Copyright © 2008 - 2015 by the authors:
+Copyright © 2008 - 2015 by the authors and contributors:
 
  * Timm S. Müller <tmueller at schulze-mueller.de>
  * Franciska Schulze <fschulze at schulze-mueller.de>
+ * Tobias Schwinger <tschwinger@isonews2.com>
 
 Permission is hereby granted, free of charge, to any person obtaining
 a copy of this software and associated documentation files (the
