@@ -18,7 +18,7 @@
 		</p>
 		<hr />
 		<p>
-			Copyright &#169; 2008 - 2015 by the authors:
+			Copyright &#169; 2008 - 2015 by the authors and contributors:
 		</p>
 		<blockquote>
 			<ul>
@@ -27,6 +27,9 @@
 				</li>
 				<li>
 					Franciska Schulze &lt;fschulze at schulze-mueller.de&gt;
+				</li>
+				<li>
+					Tobias Schwinger &lt;tschwinger@isonews2.com&gt;
 				</li>
 			</ul>
 		</blockquote>
