@@ -5,7 +5,7 @@
 	<head>
 		<title>tekUI Class Reference Manual</title>
 		<link rel="stylesheet" href="manual.css" />
-		<meta name="created" content="29-Jan-2015" />
+		<meta name="created" content="30-Jan-2015" />
 	</head>
 	<body>
 		<h1>
@@ -9391,7 +9391,7 @@ ui.Window:new {
 				</blockquote>
 				<hr class="page-break" />
 				<p>
-					Document generated on Thu Jan 29 18:30:05 2015 using gendoc.lua version 1.4
+					Document generated on Fri Jan 30 12:55:14 2015 using gendoc.lua version 1.4
 				</p>
 			</div>
 		</div>
